# slint-test

./: .gitignore  Cargo.toml
src/: main.rs
ui/: appwindow.slint  plotter.slint
