[package]
name = "slint-test"
version = "0.1.0"
authors = ["Gregory Wainer <greg.wainer@gmail.com>"]
edition = "2021"
build = "build.rs"
publish = false

[[bin]]
path = "src/main.rs"
name = "opengl_texture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.1"
glow = "0.14.0"
web-time = "1.1.0"
plotters = { version = "0.3.6", default-features = false, features = ["bitmap_backend", "surface_series", "fontconfig-dlopen", "ttf"] }
wasm-bindgen = "0.2.92"
plotters-backend = "0.3.6"

[build-dependencies]
slint-build = "1.7.1"
